feat: login endpoint with jwt generation and validation (#26)
* feat: created login endpoint which responds with a newly generated jwt

* refactor: renamed a few methods in JwtAuthenticationFilter and moved JwtExtractor and validator to the service package

* fix: removed api base path from requestMatchers as it would only match if the base path is omitted

* fix: replaced current jwt secret with a more secure secret

* feat: created class for obtaining the jwt secret and integrated it in the other jwt related classes

* feat: implemented class for creating a root user on application startup

* test: unit tests for the JwtAuthenticationFilter

* refactor(open api): added response description when wrong credentials were provided

* fix: added sample jwt secret and jwt validity

* fix: admin user creation should only be performed when the application runs with the dev profile

* test: the insertUserIntoDatabase method now encrypts the password on user creation

* test: implemented integration test for logging in

* Update application-dev.properties

Database username should be "dev". Otherwise it wouldn't work with the database in my office
