# src/main/resources/openapi.yaml
@@ -21,12 +21,40 @@ servers:
   - url: 'https://example.org'
     description: Production server
 tags:
+  - name: Authentication
+    description: Operations about managing the application authentication
   - name: User
     description: Operations about managing the application users
 
 
 
 paths:
+
+  /auth/login:
+    post:
+      operationId: login
+      summary: Authenticate user and return JWT token
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginCredentials'
+      responses:
+        200:
+          description: JWT token successfully generated
+          content:
+            application/json:
+              schema:
+                type: string
+                format: jwt
+                example: "eyJhbGciOiJIUzpXVCJ9.eyJzM5MDIyfQ.Sfl_adQssw5c"
+
+        401:
+          description: Wrong credentials
+
 
   /user/register:
     post:
@@ -352,6 +380,19 @@ components:
         - smallestPreferredAge
         - highestPreferredAge
         - id
+
+    LoginCredentials:
+      type: object
+      properties:
+        username:
+          type: string
+          example: "john.doe"
+        password:
+          type: string
+          example: "secret"
+      required:
+        - username
+        - password
 
     Gender:
       type: string
